--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -140,12 +140,183 @@ padding-left: 2rem !important;
 
 .remaining {
     grid-area: remaining;
-    background-color: rgb(255, 127, 197);
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: left;
+}
 
+.remaining-quota {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    color: rgba(0, 0, 0, 0.6);
+    margin-bottom: 5px;
+}
+
+.container-tab {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas: 'tab1 tab2 tab3 tab4';
+    grid-gap: 1rem;
+}
+
+.container-tab p {
+    margin-bottom: 0 !important;
+}
+
+.tab1 {
+    grid-area: tab1;
+    border-radius: 10px;
+    border: 1px solid grey;
+    padding: 0 10px;
+}
+
+.tab2 {
+    border: 1px solid grey;
+    border-radius: 10px;
+    grid-area: tab2;
+    padding: 0 10px;
+}
+
+.tab3 {
+    border: 1px solid grey;
+    border-radius: 10px;
+    grid-area: tab3;
+    padding: 0 10px;
+}
+
+.tab4 {
+    border: 1px solid grey;
+    border-radius: 10px;
+    grid-area: tab4;
+    padding: 0 10px;
+}
+
+.content-tab {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 5px;
+    text-align: center
+}
+
+.text {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: #777777;
+    margin-top: 5px;
+}
+
+.call-count {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: right;
+    letter-spacing: 0.01em;
+    color: #22B9FF;
+}
+
+.sms-count {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: right;
+    letter-spacing: 0.01em;
+    color: #FFB822;
+}
+
+.mail-count {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: right;
+    letter-spacing: 0.01em;
+    color: #F554E9;
+}
+
+.whatsapp-count {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: right;
+    letter-spacing: 0.01em;
+    color: #1DC9B7;
 }
 
 .table-content {
     grid-area: table1;
-    background-color: rgb(255, 136, 127);
+    border: 1px solid grey;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    display: grid;
+    grid-template-rows: 0.8fr 1.2fr 1fr 1fr;
+    grid-template-areas: 
+    'head'
+    'table'
+    'table'
+    'table'
+    ;
+}
 
+.header-table {
+    grid-area: head;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+
+.head-caption {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+hr {
+    margin-top: 0 !important;
+}
+
+.recent {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color: #ED1260;
+}
+
+.sort-filter {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between !important;
+}
+
+.table {
+    grid-area: table;
+}
+
+.sort-filter p {
+    padding-left: 20px;
+    padding-top: 10px;
+    font-family: Lato;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #3D3D3D;
 }
