--- a/src/components/home/Table.css
+++ b/src/components/home/Table.css
@@ -30,17 +30,17 @@ thead tr:nth-child(1) th {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 6px;
   }
   
   /* Track */
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 3px grey;
-    border-radius: 10px;
+    box-shadow: inset 0 0 3px #ced4da;
+    border-radius: 5px;
   }
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background: #ED1260;
-    border-radius: 10px;
+    border-radius: 5px;
   }
