--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -25,7 +25,7 @@
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-label {
+.label-text {
     font-family: 'Lato', sans-serif;
     font-style: italic;
     font-weight: normal;
